# wordpress_plugins_scraper

./: poetry.toml  pyproject.toml
app/: db.py  image.py  main.py  scrape.py  source.py
